Display error message if visiblity resticting custom column is no available (Fix for #3190)

--- a/cps/static/css/caliBlur.css
+++ b/cps/static/css/caliBlur.css
@@ -3268,6 +3268,10 @@ div.btn-group[role=group][aria-label="Download, send to Kindle, reading"] > div.
     left: auto !important
 }
 
+ul.dropdown-menu.offscreen {
+    margin: 2px -160px 0
+}
+
 div.btn-group[role=group][aria-label="Download, send to Kindle, reading"] .dropdown-menu.offscreen {
     position: fixed;
     top: 120px;
@@ -4333,6 +4337,7 @@ body.advanced_search > div.container-fluid > div.row-fluid > div.col-sm-10 > div
 
 .navbar-right > li > ul.dropdown-menu.offscreen {
     right: -10px
+
 }
 
 .login .plexBack, body.login > div.container-fluid > div.row-fluid > div.col-sm-2, body.login > div.navbar.navbar-default.navbar-static-top > div > form {
@@ -7951,3 +7956,5 @@ div.comments[data-readmore] {
     transition: height 300ms;
     overflow: hidden
 }
+
+.dropdown-menu > .offscreen
